# zds2023

./: .clang-format  .gitignore  CMakeLists.txt  README.md  requirements.txt
app/: CMakeLists.txt  Kconfig  prj.conf
app/include/: client.h
app/proto/: demo.options  demo.proto
app/remote/: CMakeLists.txt
app/remote/include/: deque_stream.h
app/remote/src/: client.cc  dequeue_stream.cc
app/remoteconfig/: CMakeLists.txt  remoteconfig.cc  remoteconfig.hh
app/service/: CMakeLists.txt
app/service/include/: demo_service.h
app/service/src/: demo_service.cc
app/src/: main.cc
distributed_app/: CMakeLists.txt  Kconfig  prj.conf  profile.sh
distributed_app/common/: CMakeLists.txt
distributed_app/common/include/: SimpleChannelOutput.hh  common.h
distributed_app/direct/include/: DirectBenchmark.hh
distributed_app/rpc/include/: RpcBenchmark.hh
distributed_app/rpc/include_nanopb/: DemoService.hh
distributed_app/rpc/include_raw/: DemoService.hh
distributed_app/rpc/src/: DemoService_nanopb.cc  DemoService_raw.cc  entrypoint.cc
distributed_app/src/: main.cc
manifest/: west.yml
samples/firebase/: README.md
samples/microservices/: README.md  profile.sh
samples/microservices/common/include/: RingReaderWriter.hh
samples/microservices/common/proto/: app.proto
samples/microservices/direct/: CMakeLists.txt
samples/microservices/direct/src/: entrypoint.cc
samples/microservices/rpc/: CMakeLists.txt  Kconfig
webconsole/: next.config.js  package-lock.json  package.json  tsconfig.json
webconsole/common/: device.ts  protos.ts  streamParser.ts
webconsole/components/: connect.tsx  log.tsx  transportMode.tsx  uploadDb.tsx
webconsole/pages/: _app.tsx  index.tsx
webconsole/protos/: bundle.js  collection.js
webconsole/protos/app/proto/: demo_pb.d.ts  demo_pb.js
webconsole/styles/: Home.module.scss
